--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,8 +1,13 @@
 name: Build on PR
 
+
 on:
   pull_request:
-
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - closed
 
 jobs:
   say-hello:
