--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,17 +1,16 @@
 name: Build on PR
 
-
 on:
   pull_request:
     types:
       - opened
-      - synchronize
-      - reopened
-      - closed
 
 jobs:
   say-hello:
     runs-on: ubuntu-latest
     steps:
+      - name: Wait for 10 seconds
+        run: sleep 10
+
       - name: Say Hello
         run: echo "Hello from GitHub Actions!"
