--- a/.github/workflows/checkrun.yml
+++ b/.github/workflows/checkrun.yml
@@ -1,6 +1,9 @@
 name: Test S3 Listener
 
 on:
+  
+  schedule:
+    - cron: "*/20 * * * *"   # Runs every 20 minutes (UTC)
   workflow_dispatch:  # Manual trigger for testing
   pull_request:
     branches:
